--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,41 @@
-*{
+
+ * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #38EF7D;
-    
 }
-::-webkit-scrollbar{
-    display: none;
+
+::-webkit-scrollbar {
+    display: none; 
 }
-#Transparant{
+
+#Transparant {
     background-color: transparent;
-   border: 1px solid #000000a8;
+    border: 1px solid #000000a8;
 }
-input:-webkit-autofill{
+
+input:-webkit-autofill {
     -webkit-background-clip: text;
 }
-.todo-container{
+
+.todo-container {
     width: 450px;
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     text-align: center;
-    background-color: rgba(64, 125, 179, 0);
+    background-color: #38EF7D; 
+    padding: 20px; 
+    border-radius: 20px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); 
 }
-ul li{
+
+ul {
+    padding: 0; 
+}
+
+ul li {
     list-style: none;
     border-radius: 18px;
 }
@@ -42,13 +53,14 @@ ul li{
 }
 
 .styled-checkbox:checked {
-    background-color: rgba(0, 0, 0, 0.815);
+    background-color: #000; 
 }
+
 .styled-checkbox:checked::after {
     content: "\2713";
     font-size: 14px;
-    font-weight: 900;
-    color: rgb(255, 255, 255); 
-    padding: 0 0 3px 4px;
+    font-weight: bold;
+    color: #FFF; 
+    padding-left: 4px;
 }
 
