--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,11 @@ ul li {
     padding-left: 4px;
 }
 
+@media (max-width: 768px) {
+    .todo-container {
+        width: 100%;
+        height: 100%;
+        border-radius: 0; 
+        padding: 10px; 
+    }
+}
